# flappy_bird_bevy

./: Cargo.toml  README.md
src/: build.rs  components.rs  constants.rs  main.rs  obstacle.rs  player.rs  resource.rs  state.rs
